internal/controller/testdata/captenant/cat-with-session-affinity-dr-vs-upgrade-to-cav-v3.expected.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  annotations:
    sme.sap.com/resource-hash: 9e5298d1e6d0e14414cc702b9635773e6fc90a0d5c4dc9e297dad5ff8ae9140c
    sme.sap.com/owner-identifier: default.test-cap-01-provider
  labels:
    sme.sap.com/owner-generation: "2"
    sme.sap.com/owner-identifier-hash: db1f1fd7eaeb0e6407c741b7e4b2540044bcc4ec
    sme.sap.com/tenant-type: provider
  name: test-cap-01-provider
  namespace: default
  ownerReferences:
    - apiVersion: sme.sap.com/v1alpha2
      blockOwnerDeletion: true
      controller: true
      kind: CAPTenant
      name: test-cap-01-provider
spec:
  gateways:
    - test-cap-01-primary-gen
    - default/test-cap-01-secondary-gen
  hosts:
    - my-provider.app-domain.test.local
    - my-provider.foo.bar.local
  http:
  - headers:
      request:
        set:
          x-downstream-peer-subject: "%DOWNSTREAM_PEER_SUBJECT%"
          x-tenant-id: invalid-tenant-id
      response:
        set:
          Set-Cookie: CAPOP_CAV=test-cap-01-cav-v1;Path=/;HttpOnly;Secure;Max-Age=0
          foo: bar
    match:
    - headers:
        Cookie:
          regex: (^|.*; )CAPOP_CAV=test-cap-01-cav-v1($|; .*)
      uri:
        regex: ^|.*(logout|logoff).*
    route:
    - destination:
        host: test-cap-01-cav-v1-app-router-svc.default.svc.cluster.local
        port:
          number: 5000
      weight: 100
  - headers:
      request:
        set:
          x-downstream-peer-subject: "%DOWNSTREAM_PEER_SUBJECT%"
          x-tenant-id: invalid-tenant-id
      response:
        set:
          Set-Cookie: CAPOP_CAV=test-cap-01-cav-v2;Path=/;HttpOnly;Secure;Max-Age=0
          foo: bar
    match:
    - headers:
        Cookie:
          regex: (^|.*; )CAPOP_CAV=test-cap-01-cav-v2($|; .*)
      uri:
        regex: ^|.*(logout|logoff).*
    route:
    - destination:
        host: test-cap-01-cav-v2-app-router-svc.default.svc.cluster.local
        port:
          number: 5000
      weight: 100
  - headers:
      request:
        set:
          x-downstream-peer-subject: "%DOWNSTREAM_PEER_SUBJECT%"
          x-tenant-id: invalid-tenant-id
      response:
        set:
          Set-Cookie: CAPOP_CAV=test-cap-01-cav-v3;Path=/;HttpOnly;Secure;Max-Age=0
          foo: bar
    match:
    - headers:
        Cookie:
          regex: (^|.*; )CAPOP_CAV=test-cap-01-cav-v3($|; .*)
      uri:
        regex: ^|.*(logout|logoff).*
    route:
    - destination:
        host: test-cap-01-cav-v3-app-router-svc.default.svc.cluster.local
        port:
          number: 5000
      weight: 100
  - headers:
      request:
        set:
          x-downstream-peer-subject: "%DOWNSTREAM_PEER_SUBJECT%"
          x-tenant-id: invalid-tenant-id
      response:
        set:
          foo: bar
    match:
    - headers:
        Cookie:
          regex: (^|.*; )CAPOP_CAV=test-cap-01-cav-v1($|; .*)
    route:
    - destination:
        host: test-cap-01-cav-v1-app-router-svc.default.svc.cluster.local
        port:
          number: 5000
      weight: 100
  - headers:
      request:
        set:
          x-downstream-peer-subject: "%DOWNSTREAM_PEER_SUBJECT%"
          x-tenant-id: invalid-tenant-id
      response:
        set:
          foo: bar
    match:
    - headers:
        Cookie:
          regex: (^|.*; )CAPOP_CAV=test-cap-01-cav-v2($|; .*)
    route:
    - destination:
        host: test-cap-01-cav-v2-app-router-svc.default.svc.cluster.local
        port:
          number: 5000
      weight: 100
  - headers:
      request:
        set:
          x-downstream-peer-subject: "%DOWNSTREAM_PEER_SUBJECT%"
          x-tenant-id: invalid-tenant-id
      response:
        set:
          foo: bar
    match:
    - headers:
        Cookie:
          regex: (^|.*; )CAPOP_CAV=test-cap-01-cav-v3($|; .*)
    route:
    - destination:
        host: test-cap-01-cav-v3-app-router-svc.default.svc.cluster.local
        port:
          number: 5000
      weight: 100
  - headers:
      request:
        set:
          x-downstream-peer-subject: "%DOWNSTREAM_PEER_SUBJECT%"
          x-tenant-id: invalid-tenant-id
      response:
        set:
          foo: bar
        add:
          Set-Cookie: CAPOP_CAV=test-cap-01-cav-v3;Path=/;HttpOnly;Secure
    route:
    - destination:
        host: test-cap-01-cav-v3-app-router-svc.default.svc.cluster.local
        port:
          number: 5000
      weight: 100
